--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Sample App deploy
+name: Deploy and LoadTest
 
 # Controls when the workflow will run
 on:
@@ -9,14 +9,14 @@ on:
         - main
 
 env:
-  AZURE_WEBAPP_NAME: "<Name of your webapp>"    # set this to your application's name
-  LOAD_TEST_RESOURCE: "<Name of your load test resource>"
-  LOAD_TEST_RESOURCE_GROUP: "<Name of your load test resource group>"
+  AZURE_WEBAPP_NAME: "mjgloaddemo"    # set this to your application's name
+  LOAD_TEST_RESOURCE: "mjgloaddemo-test"
+  LOAD_TEST_RESOURCE_GROUP: "mjgloaddemotest-rg"
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '14.15.1'                # set this to the node version to use
-  LOCATION: "West US"
-  APPINSIGHTLOCATION: "West US"
-  DATABASEACCOUNTLOCATION: "westus"
+  LOCATION: "westus3"
+  APPINSIGHTLOCATION: "westus3"
+  DATABASEACCOUNTLOCATION: "westus3"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -70,24 +70,16 @@ jobs:
         uses: azure/login@v1
         continue-on-error: false
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Create Resource Group
-        uses: azure/powershell@v1
-        continue-on-error: false
-        with:
-          inlineScript: |
-            az group create --name "${{ env.LOAD_TEST_RESOURCE_GROUP }}" --location "${{ env.LOCATION }}"
-          azPSVersion: "latest"      
+          creds: ${{ secrets.AZURE_CREDENTIALS }} 
           
-      - name: Create Azure Load Testing resource
+      - name: Create/Update Load Test
         uses: azure/arm-deploy@v1
         with:
           resourceGroupName: ${{ env.LOAD_TEST_RESOURCE_GROUP }}
           template: ./ARMTemplate/template.json
           parameters: ./ARMTemplate/parameters.json name=${{ env.LOAD_TEST_RESOURCE }} location="${{ env.LOCATION }}"
           
-      - name: 'Azure Load Testing'
+      - name: 'Run Load Test'
         uses: azure/load-testing@v1
         with:
           loadTestConfigFile: 'SampleApp.yaml'
